added login page

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>login</title>
+    <title>casa</title>
   </head>
   <body>
+    <h1>Casa</h1>
 
   </body>
 </html>
