--- a/views/login.mustache
+++ b/views/login.mustache
@@ -6,8 +6,8 @@
   </head>
   <body>
     <form class="" action="/login" method="post">
-      <input type="text" name="userName"><br>
-      <input type="text" name="passWord"><br>
+      <input type="text" name="username"><br>
+      <input type="password" name="password"><br>
       <button type="submit" name="button">Login</button>
     </form>
   </body>
