--- a/views/login.mustache
+++ b/views/login.mustache
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <form class="" action="/login" method="post">
-      <input type="text" name="username"><br>
-      <input type="password" name="password"><br>
-      <button type="submit" name="button">Login</button>
-    </form>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+
+<body>
+  {{error}}
+  <form class="" action="/login" method="post">
+    <input type="text" name="username"><br>
+    <input type="password" name="password"><br>
+    <button type="submit" name="button">Login</button>
+  </form>
+</body>
+
 </html>
